3 fix contrast errors

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 html {
     --text: #08080c;
     --background: #ffffff;
-    --primary: #208901;
+    --primary: #216506;
     --secondary: #1f2c3b;
-    --accent: #226407;
+    --accent: #1f6006;
 }
 
 * {
